--- a/style.css
+++ b/style.css
@@ -10,3 +10,66 @@ body {
 }
 
 /* Add styles here! */
+.intro-chunk {
+  max-width: 415px;
+}
+
+.intro-chunk .title {
+  font-size: 2rem;
+  margin-top: 96px;
+  margin-bottom: 48px;
+}
+
+.intro-chunk p {
+  font-size: 1.25rem;
+  margin-bottom: 16px;
+}
+
+.intro-chunk p strong {
+  color: hsla(160, 100%, 30%, 1);
+}
+
+.max-width-wrapper {
+  padding-left: 24px;
+  padding-right: 24px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.card {
+  background-color: white;
+  font-size: 1.25rem;
+  padding-left: 24px;
+  padding-right: 24px;
+  padding-bottom: 24px;
+  border-bottom: hsla(0, 0%, 60%, 1) 8px solid;
+}
+
+.card .indented-heading {
+  margin-top: 8px;
+  display: inline-block;
+  margin-left: -32px;
+  padding: 16px 32px;
+  background-color: hsla(45, 100%, 50%, 1);
+  color: hsla(0, 0%, 0%, 1);
+  border-bottom: hsla(45, 100%, 40%, 1) 8px solid;
+  margin-bottom: 0;
+}
+
+.card p {
+  margin-bottom: 16px;
+}
+
+main {
+  margin-top: 64px;
+  border-top: hsla(0, 0%, 60%, 1) 8px solid;
+  background-color: hsla(0, 0%, 40%, 1);
+  padding-top: 64px;
+  padding-bottom: 64px;
+}
+
+section.max-width-wrapper {
+  padding-left: 0;
+  padding-right: 0;
+}
